--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build
-        run: CI= false npm run build
+        run: CI=false npm run build
       - name: Deploy
-        run: netlify deploy --prod --auth ${{ secrets.IMAQA }} --site ${{ secrets.SITEID }}
+        run: netlify deploy -p --auth ${{secrets.IMAQA}} --site ${{secrets.SITEID}}
       - name: Test Lint
         run: npm run lint
       - name: Test coverage
