--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build
         run: CI=false npm run build
       - name: Deploy
-        run: netlify deploy -p --auth ${{secrets.IMAQA}} --site ${{secrets.SITEID}}
+        run: netlify deploy --prod --auth ${{ secrets.IMAQA }} --site ${{ secrets.SITEID }}
       - name: Test Lint
         run: npm run lint
       - name: Test coverage
