--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - develop/*
+
+  workflow_dispatch:
+
+env:
+  CI: false
+
 jobs:
   test-code:
     runs-on: ubuntu-latest
@@ -17,7 +23,7 @@ jobs:
       - name: Build
         run: CI=false npm run build
       - name: Deploy
-        run: netlify deploy --prod --auth ${{ secrets.IMAQA }} --site ${{ secrets.SITEID }}
+        run: netlify deploy --prod --auth ${{secrets.IMAQA}} --site ${{secrets.SITEID}}
       - name: Test Lint
         run: npm run lint
       - name: Test coverage
