update develop and add secrets

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Test coverage
         run: npm run test
-
-  Deploy:
+        
+  deploy:
     needs: validateDependencies
     environment:
       name: QA
