--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "netlify-cli": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -24,7 +23,8 @@
     "test": "react-scripts test --coverage --watchAll=false",
     "lint": "eslint --cache . --ext ts,tsx",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "netlify": "netlify"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
     "eslint-plugin-react": "^7.31.10",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "netlify-cli": "^12.1.0"
   }
 }
