--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -60,7 +60,7 @@ jobs:
         run: npm run test
 
       - name: Set Homepage
-        run: npm run setHomepage
+        run: npm run updateHomepage
 
       - name: Build
         run: CI=false npm run build
